--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "vite dev",
+    "lint": "prettier --check . && eslint ."
+  },
   "dependencies": {
     "@skeletonlabs/skeleton": "^0.92.2",
     "@sveltejs/kit": "^1.0.11",
     "svelte": "^3.55.1",
-    "vite": "^4.0.4"
+    "tailwindcss": "^3.2.4"
   },
-  "scripts": {
-    "start": "vite dev"
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.21",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^2.8.2",
+    "prettier-plugin-organize-imports": "^3.2.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "svelte-preprocess": "^4.10.7",
+    "vite": "^4.0.4"
   }
 }
