--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "start": "vite dev",
-    "lint": "prettier --check . && eslint ."
+    "lint": "svelte-check --tsconfig ./tsconfig.json && prettier --check . && eslint ."
   },
   "dependencies": {
     "@skeletonlabs/skeleton": "^0.92.2",
@@ -23,9 +23,9 @@
     "postcss": "^8.4.21",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.2",
-    "prettier-plugin-organize-imports": "^3.2.1",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "svelte-check": "^3.0.2",
     "svelte-preprocess": "^4.10.7",
     "vite": "^4.0.4"
   }
