--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "lint": "svelte-check --tsconfig ./tsconfig.json && prettier --check . && eslint ."
   },
   "dependencies": {
+    "@prisma/client": "^4.8.1",
     "@skeletonlabs/skeleton": "^0.92.2",
     "@sveltejs/kit": "^1.0.11",
     "svelte": "^3.55.1",
@@ -26,6 +27,7 @@
     "prettier": "^2.8.2",
     "prettier-plugin-svelte": "^2.9.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.8.1",
     "svelte-check": "^3.0.2",
     "svelte-preprocess": "^4.10.7",
     "vite": "^4.0.4"
