--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@prisma/client": "^4.8.1",
     "@skeletonlabs/skeleton": "^0.92.2",
+    "@stytch/vanilla-js": "^0.5.4",
     "@sveltejs/kit": "^1.0.11",
+    "stytch": "^5.18.0",
     "svelte": "^3.55.1",
     "tailwindcss": "^3.2.4"
   },
